--- a/style.css
+++ b/style.css
@@ -13,19 +13,19 @@ html,body {
 
 .main-container {
     display: grid;
-    height: 100vh;
+    grid-template-columns: 280px auto;
 }
 
 
 #sidebar {
     display: grid;
     grid-template-rows: 100px;
-    grid-auto-rows: 300px; 
+    grid-auto-rows: 300px;
     justify-items: center;
-    width: 15%;
     background-color: #1d2b3a;
     color: #ffffff;
     gap: 10px;
+    height: 100vh;
 }
 
 
@@ -36,9 +36,6 @@ html,body {
     font-family: 'Roboto';
 }
 
-img {
-    width: 33px;
-}
 
 p {
     font-size: 1.1rem;
@@ -52,6 +49,28 @@ p {
 }
 
 
+header {
+    display: grid;
+    height: 20vh;
+    grid-template-rows: 150px 150px;
+    background-color: white;
+}
 
+.search-bar {
+    display: grid;
+    align-content: space-between;
+    align-items: center;
+    grid-template-columns: repeat(2, 40px);
+    margin-top: 20px;
+    margin-left: 60px;
+}
 
-
+input {
+    width: 600px;
+    height: 30px;
+    border-style: none;
+    border-radius: 20px;
+    background-color: #e2e8f0;
+    padding-left: 15px;
+    font-size: 1rem;
+}
