--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ html,body {
     height: 100vh;
 }
 
+p {
+    font-size: 1.1rem;
+    width: 210px;
+}
 
 .side-navigation, .side-extra {
     display: grid;
@@ -36,10 +40,6 @@ html,body {
     font-family: 'Roboto';
 }
 
-
-p {
-    font-size: 1.1rem;
-}
 
 .icons {
     display: grid;
@@ -52,9 +52,10 @@ p {
 header {
     display: grid;
     height: 20vh;
-    grid-template-rows: 150px 150px;
+    grid-template-rows: 70px 150px;
     grid-template-columns: repeat(10, 150px);
     background-color: white;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
 }
 
 .search-bar {
@@ -79,8 +80,7 @@ input {
 .right-profile {
     display: grid;
     align-items: center;
-   margin-bottom: 75px;
-    gap: 20px;
+    gap: 30px;
     grid-template-columns: repeat(3, 50px);
     grid-column: 9 / 10;
 }
@@ -90,7 +90,66 @@ input {
     border-radius: 50%;
 }
 
-span {
+.right-profile p {
     font-family: 'Roboto';
-    width: 110px;
+    width: 200px;
+    font-weight: 700;
 }
+
+
+.bottom-profile {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 80px 200px;
+    grid-column: 2 / 5;
+    gap: 20px;
+}
+
+.bottom-profile p {
+    font-family: 'Roboto';
+    font-size: 1.4rem;
+    width: 270px;
+    font-weight: 700;
+}
+
+.bottom-profile img {
+    width: 80px;
+    border-radius: 50%;
+}
+
+span {
+    font-size: 0.9rem;
+}
+
+.header-buttons {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3, 100px);
+    gap: 60px;
+    grid-column: 8 / 10;
+}
+
+button {
+   
+    background-color: #336091;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 20px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    color: #fff;
+    cursor: pointer;
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 600;
+    width: 120px;
+    height: 44px;
+}
+
+
+button:hover {
+    background-color: #1a385f;
+  }
+  
+  button:active {
+    background-color: #112641;
+    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+  }
